# openkit

./: .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  minisign.pub
.github/workflows/: ci.yml  release.yml
docs/: ACTION_ITEMS.md  API.md  BACKEND.md  CONFLICT_ANALYSIS_REPORT.md  CONTEXT.md  GLOSSARY.md  HUB-DOCS.md  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  QUALITY_GATES.md  README.md  SECURITY.md
docs/adr/: ADR_0001_MANAGED_JSON_STATE.md  README.md
docs/agent-compat/: HUB-AGENT-COMPAT.md  README.md
docs/audit/: BASELINE_AUDIT.md  DECISION_MATRIX.md  HUB-AUDIT.md  INTERNAL_BASELINE.md  INTERNAL_SWEEP_PLAN.md  SWEEP_PLAN.md
docs/content-protocol/: HUB-CONTENT-PROTOCOL.md  MANAGED_STATE_SCHEMA.md  MANIFEST_SCHEMA.md  PROTOCOL.md  README.md  SYNC_SEMANTICS.md
docs/requirements/: HUB-REQUIREMENTS.md  README.md
docs/sprint/: HUB-SPRINTS.md  README.md
docs/sprint/Sprint-01/: README.md  (+4 more)
internal/cli/: check.go  init.go  memory.go  root.go  uninstall.go  upgrade.go  upgrade_test.go  version.go
internal/managedstate/: managedstate.go
internal/platform/: paths.go
internal/selfupdate/: checker.go  github_latest.go  state.go  upgrade.go  upgrade_test.go
internal/syncer/: syncer.go
internal/targets/: claude_commands.go  claude_commands_test.go  codex_content.go  codex_content_test.go  cursor_content.go  cursor_content_test.go  targets.go
internal/templates/: embed.go
rust-cli/: Cargo.toml  README.md
rust-cli/src/: main.rs
rust-cli/tests/: command_contracts.rs
scripts/: install.ps1  install.sh  uninstall.sh
(+164 files in other folders)
