[package]
name = "openkit"
version = "0.5.1"
edition = "2021"
description = "OpenKit Rust CLI"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.13"
