[package]
name = "openkit"
version = "0.5.20"
edition = "2021"
description = "OpenKit Rust CLI"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
include_dir = "0.7"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.13"
